fix scrollbar and flexbox overlap on chrome and safari

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   /* background-image: url("https://512pixels.net/downloads/os9-5k/Flower-Power.jpg"); */
   background-image: url("https://www.insanelymac.com/uploads/monthly_11_2009/post-529442-1258786812.jpg");
   background-size: cover;
+  overflow: hidden;
 }
 
 code {
